TestNG entegrasyonu tamamlandı, klasör yapısı düzenlendi ve Docker bağlantısı URI kullanılarak güncellendi